# procman

./: .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  (+2 more)
app/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns  source-frog-cute.png.bak  source-frog-cute.svg.bak
app/src-tauri/src/: autostart.rs  cloudflared.rs  config_store.rs  crash_log.rs  lib.rs  log_buffer.rs  log_storage.rs  main.rs  process.rs  runtime_state.rs  state.rs  stress.rs  types.rs  vscode_scanner.rs  watcher.rs
app/src-tauri/src/commands/: autostart.rs  docker.rs  group.rs  logs.rs  mod.rs  port.rs  ports.rs  process.rs  project.rs  remote.rs  scan.rs  script.rs  session.rs  settings.rs  tunnel.rs
app/src-tauri/src/server/: audit.rs  auth.rs  mod.rs  ratelimit.rs  routes.rs  spa.rs  tls.rs  ws.rs
mobile/: README.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: audit-pii.sh  build-dmg.sh  gen-icon.py  install.sh  release.sh  serve-mobile.sh  watch-install.sh
spikes/: FINAL-VERDICT.md  README.md
vscode-extension/: package.json  pnpm-lock.yaml  procman-0.1.0.vsix
web/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
(+108 files in other folders)
