[package]
name = "procman"
version = "0.1.0"
description = "Mac process manager GUI"
authors = ["procman"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "procman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
serde_yaml = "0.9"
dirs = "5"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
notify = "6"
walkdir = "2"
libc = "0.2"
dashmap = "6"
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
